Update to use tempfiles and clear output dir with original and generated files